--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
     <link href="https://fonts.googleapis.com/css?family=Poppins:300,300i,400,400i,500,700,700i,900,900i|Lato:300,400,500,600,700:Playfair+Display:400,700,900" rel="stylesheet">
     <link rel="stylesheet" href="libs/pagePiling/jquery.pagepiling.min.css">
     <link rel="stylesheet" href="css/main.min.css">
-    <title>Gnusmas - Agency, Corporate, Studio Minamal Landing Page</title>
+    <title>Rahul Manerikar - Front End Web Developer</title>
     <meta name="description" content="">
   </head>
   <body>
@@ -43,13 +43,13 @@
         </div>
       </header>
       <div id="alx-pagepiling">
-        <section class="alx-vertical-middle pp-scrollable alx-bg-img" data-image="images/bgr.jpg" data-tooltipsection="First screen">
+        <section class="alx-vertical-middle pp-scrollable alx-bg-img" data-image="images/bg/minimalist-mountain.jpg" data-tooltipsection="First screen">
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-lg-8">
                 <div class="alx-heading alx-text-center">
-                  <h1 class="alx-heading__title">Richard Movavi</h1>
-                  <div class="alx-heading__pretitle"><i class="fa fa-camera-retro"></i>Developer / Speaker / Bloger</div>
+                  <h1 class="alx-heading__title">Rahul Manerikar</h1>
+                  <div class="alx-heading__pretitle"><i class="fa fa-camera-retro"></i>Web Developer / Meme Lord</div>
                   <div class="alx-heading__zigzag">
                     <svg x="0px" y="0px" viewBox="0 0 100 19.5">
                       <g>
@@ -66,7 +66,7 @@
           </div>
           <div class="alx-particles alx-canvas" data-dotscolor="rgba(99, 99, 99, 0.20)" data-linescolor="rgba(99, 99, 99, 0.11)"></div>
         </section>
-        <section class="alx-vertical-middle alx-dark-section pp-scrollable alx-bg-img" data-image="images/bgd1.jpg">
+        <section class="alx-vertical-middle alx-dark-section pp-scrollable alx-bg-img" data-image="images/bg/minimalist-2.jpg">
           <div class="alx-vertical-heading"><i class="fa fa-question-circle-o"></i>Who i’m</div>
           <div class="container">
             <div class="row align-items-center">
@@ -92,7 +92,7 @@
             </div>
           </div>
         </section>
-        <section class="alx-vertical-middle pp-scrollable alx-bg-img" data-image="images/bg2.jpg" data-tooltipsection="Second screen">
+        <section class="alx-vertical-middle pp-scrollable alx-bg-img" data-image="images/bg/minimalist-3.jpg" data-tooltipsection="Second screen">
           <div class="container">
             <div class="row align-items-center">
               <div class="col-lg-5 alx-style" data-style="margin: 50px 0">
@@ -192,7 +192,7 @@
             </div>
           </div>
         </section>
-        <section class="alx-vertical-middle pp-scrollable alx-dark-section alx-bg-img" data-image="images/bgd3.jpg">
+        <section class="alx-vertical-middle pp-scrollable alx-dark-section alx-bg-img" data-image="images/bg/minimalist-4.jpg">
           <div class="alx-vertical-heading"><i class="fa fa-code"></i>What i do</div>
           <div class="container">
             <div class="row justify-content-center">
@@ -259,7 +259,7 @@
             </div>
           </div>
         </section>
-        <section class="alx-vertical-middle pp-scrollable alx-bg-img" data-image="images/bgl3.jpg">
+        <section class="alx-vertical-middle pp-scrollable alx-bg-img" data-image="images/bg/minimalist-1.jpg">
           <div class="container">
             <div class="row justify-content-center">
               <div class="col-lg-5">
@@ -322,7 +322,7 @@
             </div>
           </div>
         </section>
-        <section class="alx-vertical-middle pp-scrollable alx-dark-section alx-bg-img" data-image="images/bgd3.jpg">
+        <section class="alx-vertical-middle pp-scrollable alx-dark-section alx-bg-img" data-image="images/bg/abstract-hand.jpg">
           <div class="alx-vertical-heading"><i class="fa fa-rocket"></i>My Latest best Works</div>
           <div class="container">
             <div class="col-lg-12">
@@ -427,7 +427,7 @@
             </div>
           </div>
         </section>
-        <section class="alx-vertical-middle pp-scrollable alx-bg-img" data-image="images/bg2.jpg">
+        <section class="alx-vertical-middle pp-scrollable alx-bg-img" data-image="images/bg/retro-4.jpg">
           <div class="alx-vertical-heading"><i class="fa fa-commenting-o"></i>Clients say about me</div>
           <div class="container">
             <div class="row">
@@ -480,7 +480,7 @@
             </div>
           </div>
         </section>
-        <section class="alx-vertical-middle alx-dark-section pp-scrollable alx-bg-img" data-image="images/bgd5.jpg">
+        <section class="alx-vertical-middle alx-dark-section pp-scrollable alx-bg-img" data-image="images/bg/retro-1.jpg">
           <div class="alx-vertical-heading"><i class="fa fa-heart-o"></i>Expensive</div>
           <div class="container">
             <div class="row align-items-center">
@@ -544,7 +544,7 @@
             </div>
           </div>
         </section>
-        <section class="alx-vertical-middle pp-scrollable alx-bg-img" data-image="images/bgl5.jpg">
+        <section class="alx-vertical-middle pp-scrollable alx-bg-img" data-image="images/bg/geek.jpg">
           <div class="alx-vertical-heading"><i class="fa fa-bell-o"></i>Contact with me</div>
           <div class="container">
             <div class="row align-items-center">
